--- a/Refactored_Py_DS_ML_Bootcamp-master/10-Data-Capstone-Projects/03-Finance Project.ipynb
+++ b/Refactored_Py_DS_ML_Bootcamp-master/10-Data-Capstone-Projects/03-Finance Project.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "In this data project we will focus on exploratory data analysis of stock prices. Keep in mind, this project is just meant to practice your visualization and pandas skills, it is not meant to be a robust financial analysis or be taken as financial advice.\n",
     "____\n",
-    "** NOTE: This project is extremely challenging because it will introduce a lot of new concepts and have you looking things up on your own (we'll point you in the right direction) to try to solve the tasks issued. Feel free to just go through the solutions lecture notebook and video as a \"walkthrough\" project if you don't want to have to look things up yourself. You'll still learn a lot that way! **\n",
+    "**NOTE: This project is extremely challenging because it will introduce a lot of new concepts and have you looking things up on your own (we'll point you in the right direction) to try to solve the tasks issued. Feel free to just go through the solutions lecture notebook and video as a \"walkthrough\" project if you don't want to have to look things up yourself. You'll still learn a lot that way!**\n",
     "____\n",
     "We'll focus on bank stocks and see how they progressed throughout the [financial crisis](https://en.wikipedia.org/wiki/Financial_crisis_of_2007%E2%80%9308) all the way to early 2016."
    ]
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,12 +67,12 @@
     "* Morgan Stanley\n",
     "* Wells Fargo\n",
     "\n",
-    "** Figure out how to get the stock data from Jan 1st 2006 to Jan 1st 2016 for each of these banks. Set each bank to be a separate dataframe, with the variable name for that bank being its ticker symbol. This will involve a few steps:**\n",
+    "**Figure out how to get the stock data from Jan 1st 2006 to Jan 1st 2016 for each of these banks. Set each bank to be a separate dataframe, with the variable name for that bank being its ticker symbol. This will involve a few steps:**\n",
     "1. Use datetime to set start and end datetime objects.\n",
     "2. Figure out the ticker symbol for each bank.\n",
     "2. Figure out how to use datareader to grab info on the stock.\n",
     "\n",
-    "** Use [this documentation page](https://pandas-datareader.readthedocs.io/en/latest/remote_data.html) for hints and instructions (it should just be a matter of replacing certain values. Use google finance as a source, for example:**\n",
+    "**Use [this documentation page](https://pandas-datareader.readthedocs.io/en/latest/remote_data.html) for hints and instructions (it should just be a matter of replacing certain values. Use google finance as a source, for example:**\n",
     "    \n",
     "    # Bank of America\n",
     "    BAC = data.DataReader(\"BAC\", 'google', start, end)\n",
@@ -84,19 +84,285 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ImmediateDeprecationError",
+     "evalue": "\nGoogle finance has been immediately deprecated due to large breaks in the API without the\nintroduction of a stable replacement. Pull Requests to re-enable these data\nconnectors are welcome.\n\nSee https://github.com/pydata/pandas-datareader/issues\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImmediateDeprecationError\u001b[0m                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-0504cfd206ea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mstart\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2006\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2016\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'BAC'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'google'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstart\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas_datareader/data.py\u001b[0m in \u001b[0;36mDataReader\u001b[0;34m(name, data_source, start, end, retry_count, pause, session, access_key)\u001b[0m\n\u001b[1;32m    314\u001b[0m                                  \u001b[0mchunksize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m25\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    315\u001b[0m                                  \u001b[0mretry_count\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mretry_count\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpause\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpause\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 316\u001b[0;31m                                  session=session).read()\n\u001b[0m\u001b[1;32m    317\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    318\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mdata_source\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"iex\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas_datareader/google/daily.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, symbols, start, end, retry_count, pause, session, chunksize)\u001b[0m\n\u001b[1;32m     34\u001b[0m     def __init__(self, symbols=None, start=None, end=None, retry_count=3,\n\u001b[1;32m     35\u001b[0m                  pause=0.1, session=None, chunksize=25):\n\u001b[0;32m---> 36\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mImmediateDeprecationError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDEP_ERROR_MSG\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Google finance'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m         super(GoogleDailyReader, self).__init__(symbols, start, end,\n\u001b[1;32m     38\u001b[0m                                                 \u001b[0mretry_count\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpause\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msession\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImmediateDeprecationError\u001b[0m: \nGoogle finance has been immediately deprecated due to large breaks in the API without the\nintroduction of a stable replacement. Pull Requests to re-enable these data\nconnectors are welcome.\n\nSee https://github.com/pydata/pandas-datareader/issues\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = datetime.datetime(2006, 1, 1)\n",
+    "end = datetime.datetime(2016, 1, 1)\n",
+    "data.DataReader('BAC', 'google', start, end)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th>Bank Ticker</th>\n",
+       "      <th colspan=\"5\" halign=\"left\">BAC</th>\n",
+       "      <th colspan=\"5\" halign=\"left\">C</th>\n",
+       "      <th>...</th>\n",
+       "      <th colspan=\"5\" halign=\"left\">MS</th>\n",
+       "      <th colspan=\"5\" halign=\"left\">WFC</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stock Info</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2006-01-03</th>\n",
+       "      <td>46.92</td>\n",
+       "      <td>47.18</td>\n",
+       "      <td>46.15</td>\n",
+       "      <td>47.08</td>\n",
+       "      <td>16296700</td>\n",
+       "      <td>490.0</td>\n",
+       "      <td>493.8</td>\n",
+       "      <td>481.1</td>\n",
+       "      <td>492.9</td>\n",
+       "      <td>1537660</td>\n",
+       "      <td>...</td>\n",
+       "      <td>57.17</td>\n",
+       "      <td>58.49</td>\n",
+       "      <td>56.74</td>\n",
+       "      <td>58.31</td>\n",
+       "      <td>5377000</td>\n",
+       "      <td>31.60</td>\n",
+       "      <td>31.98</td>\n",
+       "      <td>31.20</td>\n",
+       "      <td>31.90</td>\n",
+       "      <td>11016400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-01-04</th>\n",
+       "      <td>47.00</td>\n",
+       "      <td>47.24</td>\n",
+       "      <td>46.45</td>\n",
+       "      <td>46.58</td>\n",
+       "      <td>17757900</td>\n",
+       "      <td>488.6</td>\n",
+       "      <td>491.0</td>\n",
+       "      <td>483.5</td>\n",
+       "      <td>483.8</td>\n",
+       "      <td>1871020</td>\n",
+       "      <td>...</td>\n",
+       "      <td>58.70</td>\n",
+       "      <td>59.28</td>\n",
+       "      <td>58.35</td>\n",
+       "      <td>58.35</td>\n",
+       "      <td>7977800</td>\n",
+       "      <td>31.80</td>\n",
+       "      <td>31.82</td>\n",
+       "      <td>31.36</td>\n",
+       "      <td>31.53</td>\n",
+       "      <td>10871000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-01-05</th>\n",
+       "      <td>46.58</td>\n",
+       "      <td>46.83</td>\n",
+       "      <td>46.32</td>\n",
+       "      <td>46.64</td>\n",
+       "      <td>14970900</td>\n",
+       "      <td>484.4</td>\n",
+       "      <td>487.8</td>\n",
+       "      <td>484.0</td>\n",
+       "      <td>486.2</td>\n",
+       "      <td>1143160</td>\n",
+       "      <td>...</td>\n",
+       "      <td>58.55</td>\n",
+       "      <td>58.59</td>\n",
+       "      <td>58.02</td>\n",
+       "      <td>58.51</td>\n",
+       "      <td>5778000</td>\n",
+       "      <td>31.50</td>\n",
+       "      <td>31.56</td>\n",
+       "      <td>31.31</td>\n",
+       "      <td>31.50</td>\n",
+       "      <td>10158000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-01-06</th>\n",
+       "      <td>46.80</td>\n",
+       "      <td>46.91</td>\n",
+       "      <td>46.35</td>\n",
+       "      <td>46.57</td>\n",
+       "      <td>12599800</td>\n",
+       "      <td>488.8</td>\n",
+       "      <td>489.0</td>\n",
+       "      <td>482.0</td>\n",
+       "      <td>486.2</td>\n",
+       "      <td>1370250</td>\n",
+       "      <td>...</td>\n",
+       "      <td>58.77</td>\n",
+       "      <td>58.85</td>\n",
+       "      <td>58.05</td>\n",
+       "      <td>58.57</td>\n",
+       "      <td>6889800</td>\n",
+       "      <td>31.58</td>\n",
+       "      <td>31.78</td>\n",
+       "      <td>31.38</td>\n",
+       "      <td>31.68</td>\n",
+       "      <td>8403800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-01-09</th>\n",
+       "      <td>46.72</td>\n",
+       "      <td>46.97</td>\n",
+       "      <td>46.36</td>\n",
+       "      <td>46.60</td>\n",
+       "      <td>15620000</td>\n",
+       "      <td>486.0</td>\n",
+       "      <td>487.4</td>\n",
+       "      <td>483.0</td>\n",
+       "      <td>483.9</td>\n",
+       "      <td>1680740</td>\n",
+       "      <td>...</td>\n",
+       "      <td>58.63</td>\n",
+       "      <td>59.29</td>\n",
+       "      <td>58.62</td>\n",
+       "      <td>59.19</td>\n",
+       "      <td>4144500</td>\n",
+       "      <td>31.68</td>\n",
+       "      <td>31.82</td>\n",
+       "      <td>31.56</td>\n",
+       "      <td>31.68</td>\n",
+       "      <td>5619600</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 30 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Bank Ticker    BAC                                     C                       \\\n",
+       "Stock Info    Open   High    Low  Close    Volume   Open   High    Low  Close   \n",
+       "Date                                                                            \n",
+       "2006-01-03   46.92  47.18  46.15  47.08  16296700  490.0  493.8  481.1  492.9   \n",
+       "2006-01-04   47.00  47.24  46.45  46.58  17757900  488.6  491.0  483.5  483.8   \n",
+       "2006-01-05   46.58  46.83  46.32  46.64  14970900  484.4  487.8  484.0  486.2   \n",
+       "2006-01-06   46.80  46.91  46.35  46.57  12599800  488.8  489.0  482.0  486.2   \n",
+       "2006-01-09   46.72  46.97  46.36  46.60  15620000  486.0  487.4  483.0  483.9   \n",
+       "\n",
+       "Bank Ticker             ...        MS                                  WFC  \\\n",
+       "Stock Info    Volume    ...      Open   High    Low  Close   Volume   Open   \n",
+       "Date                    ...                                                  \n",
+       "2006-01-03   1537660    ...     57.17  58.49  56.74  58.31  5377000  31.60   \n",
+       "2006-01-04   1871020    ...     58.70  59.28  58.35  58.35  7977800  31.80   \n",
+       "2006-01-05   1143160    ...     58.55  58.59  58.02  58.51  5778000  31.50   \n",
+       "2006-01-06   1370250    ...     58.77  58.85  58.05  58.57  6889800  31.58   \n",
+       "2006-01-09   1680740    ...     58.63  59.29  58.62  59.19  4144500  31.68   \n",
+       "\n",
+       "Bank Ticker                                 \n",
+       "Stock Info    High    Low  Close    Volume  \n",
+       "Date                                        \n",
+       "2006-01-03   31.98  31.20  31.90  11016400  \n",
+       "2006-01-04   31.82  31.36  31.53  10871000  \n",
+       "2006-01-05   31.56  31.31  31.50  10158000  \n",
+       "2006-01-06   31.78  31.38  31.68   8403800  \n",
+       "2006-01-09   31.82  31.56  31.68   5619600  \n",
+       "\n",
+       "[5 rows x 30 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_pickle('all_banks')\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -109,7 +375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Create a list of the ticker symbols (as strings) in alphabetical order. Call this list: tickers**"
+    "**Create a list of the ticker symbols (as strings) in alphabetical order. Call this list: tickers**"
    ]
   },
   {
@@ -123,7 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Use pd.concat to concatenate the bank dataframes together to a single data frame called bank_stocks. Set the keys argument equal to the tickers list. Also pay attention to what axis you concatenate on.**"
+    "**Use pd.concat to concatenate the bank dataframes together to a single data frame called bank_stocks. Set the keys argument equal to the tickers list. Also pay attention to what axis you concatenate on.**"
    ]
   },
   {
@@ -137,7 +403,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Set the column name levels (this is filled out for you):**"
+    "**Set the column name levels (this is filled out for you):**"
    ]
   },
   {
@@ -153,7 +419,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Check the head of the bank_stocks dataframe.**"
+    "**Check the head of the bank_stocks dataframe.**"
    ]
   },
   {
@@ -397,8 +663,15 @@
     "Let's explore the data a bit! Before continuing, I encourage you to check out the documentation on [Multi-Level Indexing](http://pandas.pydata.org/pandas-docs/stable/advanced.html) and [Using .xs](http://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.xs.html).\n",
     "Reference the solutions if you can not figure out how to use .xs(), since that will be a major part of this project.\n",
     "\n",
-    "** What is the max Close price for each bank's stock throughout the time period?**"
+    "**What is the max Close price for each bank's stock throughout the time period?**"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -438,7 +711,10 @@
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
@@ -1126,9 +1402,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "** Use .iplot(kind='candle) to create a candle plot of Bank of America's stock from Jan 1st 2015 to Jan 1st 2016.**"
    ]
@@ -1233,9 +1507,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
